--- a/index.html
+++ b/index.html
@@ -983,7 +983,7 @@
                     <div class="contact-item">
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/><circle cx="12" cy="10" r="3"/></svg>
                         <div>
-                            Head Hall, Room E-44<br>
+                            Head Hall, Room D-33<br>
                             University of New Brunswick<br>
                             P.O. Box 4400<br>
                             Fredericton, NB E3B 5A3
